---
config:
  look: neo
  theme: mc
  layout: elk
---
classDiagram
    %% Core Models
    class BattleGame {
        +string id
        +string seriesId
        +Player p1
        +Player p2
        +string winner
        +number timestamp
        +string logRaw
        +BattleNotes notes
        +number turnCount
    }

    class Player {
        +string id
        +string name
        +Pokemon[] team
    }

    class BattleNotes {
        +Pokemon[] p1Team
        +Pokemon[] p2Team
        +Pokemon p1Tera
        +Pokemon p2Tera
        +string winner
    }

    class Pokemon {
        +string name
        +string species
        +string details
        +string teraType
        +boolean isTera
        +string hp
    }

    %% Relationships between Models
    BattleGame *-- Player : contains
    BattleGame *-- BattleNotes : contains
    Player "1" *-- "*" Pokemon : team
    BattleNotes "1" o-- "*" Pokemon : references

    %% Repository Layer
    class IBattleRepository {
        <<interface>>
        +saveBattle(battle: BattleGame) Promise~void~
        +getSeries(seriesId: string) Promise~BattleGame[]~
        +getAllBattles() Promise~BattleGame[]~
        +getBattle(id: string) Promise~BattleGame~
    }

    class IndexedDBBattleRepository {
        -string dbName
        -number version
        -IDBDatabase db
        +saveBattle(battle: BattleGame) Promise~void~
        +getSeries(seriesId: string) Promise~BattleGame[]~
        +getAllBattles() Promise~BattleGame[]~
        +getBattle(id: string) Promise~BattleGame~
    }

    IndexedDBBattleRepository ..|> IBattleRepository : implements
    IndexedDBBattleRepository ..> BattleGame : persists

    %% Parser Layer
    class LogParser {
        -Map~string, ILogLineStrategy~ strategies
        +registerStrategy(key: string, strategy: ILogLineStrategy)
        +parse(logData: string, battleId: string) BattleGame
    }

    class ILogLineStrategy {
        <<interface>>
        +parse(lineParts: string[], game: BattleGame) void
    }

    class PlayerStrategy {
        +parse(parts: string[], game: BattleGame) void
    }
    class PokeStrategy {
        +parse(parts: string[], game: BattleGame) void
    }
    class SwitchStrategy {
        +parse(parts: string[], game: BattleGame) void
    }
    class TeraStrategy {
        +parse(parts: string[], game: BattleGame) void
    }
    class WinStrategy {
        +parse(parts: string[], game: BattleGame) void
    }
    class SeriesStrategy {
        +parse(parts: string[], game: BattleGame) void
    }

    LogParser o-- ILogLineStrategy : uses
    LogParser ..> BattleGame : creates
    PlayerStrategy ..|> ILogLineStrategy : implements
    PokeStrategy ..|> ILogLineStrategy : implements
    SwitchStrategy ..|> ILogLineStrategy : implements
    TeraStrategy ..|> ILogLineStrategy : implements
    WinStrategy ..|> ILogLineStrategy : implements
    SeriesStrategy ..|> ILogLineStrategy : implements

    %% Strategies modify BattleGame
    ILogLineStrategy ..> BattleGame : modifies

    %% Extension Flow (Conceptual)
    class BackgroundScript {
        -LogParser parser
        -IndexedDBBattleRepository repository
        +onMessage(SAVE_BATTLE)
    }

    class ContentScript {
        +onMessage(SHOWDOWN_ANALYZER_LOG)
        +sendMessage(SAVE_BATTLE)
    }

    class InjectedScript {
        +processBattle()
        +postMessage(SHOWDOWN_ANALYZER_LOG)
    }

    BackgroundScript --> LogParser : uses
    BackgroundScript --> IndexedDBBattleRepository : uses
    ContentScript --> BackgroundScript : sends message
    InjectedScript --> ContentScript : sends message
